@@ -96,7 +96,7 @@
         "name": "Pedro Costa",
         "email": "pedro@pmcdigital.pt"
     }],
-    "version": "3.0.0-21",
+    "version": "3.0.0-22",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
