@@ -33,10 +33,11 @@
 - updated: `NEWSCHEMA()` supports `NEWSCHEMA('group/name')`
 - updated: `ROUTE()`, extended syntax for schemas, for example: `Schema --> @name` (more in docs.)
 - updated: `ROUTE()` supports a new HTTP method definition `ROUTE('GET /api/users/')`, `ROUTE('POST /api/users/')`, etc.
-- updaded: `tpm` supports a new command called `bundle`, for example: `tpm bundle cms`
+- updated: `tpm` supports a new command called `bundle`, for example: `tpm bundle cms`
 - updated: `F.restore()` filter can return a new filename (for files only)
 - updated: `@{import('livereload')}` or `@{import('livereload wss://mywebsite.com')}` supports `livereload` value and it's rendered in `debug` mode only
 - updated: information after the framework is started
+- updated: `schema.define('name', null)` removes a schema field
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
